fix: z-index fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -591,7 +591,7 @@ margin-bottom: 37px;
   .herosection-first-block svg{
     margin-top: -160px;
     width: 250px;
-    z-index: 20;
+    z-index: 0;
     align-self: flex-start;
   }
   .herosection-second-block{
